--- a/public-html/signup_signin.html
+++ b/public-html/signup_signin.html
@@ -8,11 +8,11 @@
   <!-- custom css -->
   <link rel="stylesheet" href="css/app.css">
 
-  <!-- bootstrap & dependencies (jquery and tether) --> 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+  <!-- bootstrap & dependencies (jquery and popper) --> 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="page-header">
@@ -32,10 +32,8 @@
     <div class="row">
       <div class="col-lg-6">
         <div class="card card-clemson mb-3">
-          <div class="card-header">
-            Sign In
-          </div>
-          <div class="card-block">
+          <h5 class="card-header">Sign In</h5>
+          <div class="card-body">
             <div class="form" id="si-form">
               <div class="form-group row">
                 <label for="si-username" class="col-md-4 col-form-label">Username</label>
@@ -58,10 +56,8 @@
       </div>
       <div class="col-lg-6">
         <div class="card card-clemson mb-3">
-          <div class="card-header">
-            Sign Up
-          </div>
-          <div class="card-block">
+          <h5 class="card-header">Sign Up</h5>
+          <div class="card-body">
             <div class="form" id="su-form">
               <div class="form-group row">
                 <label for="su-cuid" class="col-md-4 col-form-label">CUID</label>
