--- a/public-html/signup_signin.html
+++ b/public-html/signup_signin.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>CUIR</title>
   <meta charset="utf-8">
-  <title>Sign Up / Sign In</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- custom css -->
