--- a/public-html/add_inst.html
+++ b/public-html/add_inst.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- custom css -->
-  <link rel="stylesheet" href="css/app.css">
-
   <!-- bootstrap & dependencies (jquery and popper) --> 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
+  <!-- custom css -->
+  <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
   <div class="page-header">
@@ -22,10 +22,10 @@
   </div>
 
   <div class="container">
-    <div class="card">
+    <div class="card card-clemson">
       <h5 class="card-header">Add Instrument</h5>
       <div class="card-body">
-        <div class="form" id="ai-form">
+        <form class="form" id="ai-form">
           <div class="form-group row">
             <label for="ai-serial-num" class="col-md-4 col-form-label">Serial Number</label>
             <div class="col-md-8">
@@ -36,6 +36,7 @@
             <label for="ai-type" class="col-md-4 col-form-label">Type</label>
             <div class="col-md-8">
               <select class="form-control" id="ai-type">
+                <option selected="selected">-- Choose One --</option>
                 <option>Trumpet</option>
                 <option>Tuba</option>
                 <option>Flute</option>
@@ -48,6 +49,7 @@
             <label for="ai-condition" class="col-md-4 col-form-label">Condition</label>
             <div class="col-md-8">
               <select class="form-control" id="ai-condition">
+                <option selected="selected">-- Choose One --</option>
                 <option>Excellent</option>
                 <option>Good</option>
                 <option>Fair</option>
@@ -57,7 +59,7 @@
             </div>
           </div>
           <button type="button" class="btn btn-clemson">Add Instrument</button>
-        </div>
+        </form>
       </div>
     </div>
   </div>
