--- a/public-html/signup_signin.html
+++ b/public-html/signup_signin.html
@@ -5,14 +5,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- custom css -->
-  <link rel="stylesheet" href="css/app.css">
 
   <!-- bootstrap & dependencies (jquery and popper) --> 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+
+  <!-- custom css -->
+  <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
   <div class="page-header">
@@ -22,7 +23,7 @@
   </div>
 
 	<div class="container">
-    <div id="info-bar" class="jumbotron"> 
+    <div id="info-bar" class="jumbotron jumbotron-clemson"> 
       <h2>Lorum Ipsum Dolor Sit Amit.</h2>
       <p>Phasellus at egestas nisi. Nunc posuere sagittis ultrices. Vestibulum molestie odio et velit malesuada, at egestas ante congue. Ut euismod leo turpis, id finibus eros volutpat at. Suspendisse at lectus vel leo fermentum ultricies. Nam nec vulputate lectus. Fusce ligula massa, ultrices ut neque ac, iaculis imperdiet lorem. Proin facilisis egestas lorem, non pretium lectus porttitor vel. Vestibulum ac quam iaculis, aliquam mauris ut, hendrerit nisi. Phasellus eget mauris non mauris vulputate ullamcorper a id nunc. Quisque semper nulla vitae dui convallis lobortis. Suspendisse potenti. Donec interdum non libero congue gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </div>
@@ -34,7 +35,7 @@
         <div class="card card-clemson mb-3">
           <h5 class="card-header">Sign In</h5>
           <div class="card-body">
-            <div class="form" id="si-form">
+            <form class="form" id="si-form">
               <div class="form-group row">
                 <label for="si-username" class="col-md-4 col-form-label">Username</label>
                 <div class="col-md-8">
@@ -48,9 +49,9 @@
                 </div>
               </div>
               <a href="signin.html">
-                <button type="button" class="btn btn-clemson btn-large">Sign In</button>
+                <button type="button" class="btn btn-clemson">Sign In</button>
               </a>
-            </div>
+            </form>
           </div>
         </div>
       </div>
@@ -58,7 +59,7 @@
         <div class="card card-clemson mb-3">
           <h5 class="card-header">Sign Up</h5>
           <div class="card-body">
-            <div class="form" id="su-form">
+            <form class="form" id="su-form">
               <div class="form-group row">
                 <label for="su-cuid" class="col-md-4 col-form-label">CUID</label>
                 <div class="col-md-8">
@@ -102,9 +103,9 @@
                 </div>
               </div>
               <a href="signup.html">
-                <button type="button" class="btn btn-clemson btn-large">Sign Up</button>
+                <button type="button" class="btn btn-clemson">Sign Up</button>
               </a>
-            </div>
+            </form>
           </div>
         </div>
       </div>
