added checkout and profile pages. Changes to instruments and pending_requests

--- a/public-html/pending_requests.html
+++ b/public-html/pending_requests.html
@@ -82,7 +82,7 @@
           <tr>
             <td>1112234</td>
             <td>Trumpet</td>
-            <td><a href="profile?uname=lilcub">lilcub</a></td>
+            <td><a href="profile.html?uname=lilcub">lilcub</a></td>
             <td>10-05-17</td>
             <td>10-05-18</td>
             <td>
@@ -93,7 +93,7 @@
           <tr>
             <td>8089091</td>
             <td>Tuba</td>
-            <td><a href="profile?uname=jfmarion">jfmarion</a></td>
+            <td><a href="profile.html?uname=jfmarion">jfmarion</a></td>
             <td>08-01-17</td>
             <td>05-01-18</td>
             <td>
@@ -104,7 +104,7 @@
           <tr>
             <td>2121213</td>
             <td>Tuba</td>
-            <td><a href="profile?uname=lwilson">lwilson</a></td>
+            <td><a href="profile.html?uname=lwilson">lwilson</a></td>
             <td>08-01-17</td>
             <td>05-01-18</td>
             <td>
@@ -115,7 +115,7 @@
           <tr>
             <td>1234567</td>
             <td>Flute</td>
-            <td><a href="profile?uname=bcoomes">bcoomes</a></td>
+            <td><a href="profile.html?uname=bcoomes">bcoomes</a></td>
             <td>07-03-16</td>
             <td>12-31-20</td>
             <td>
