--- a/public-html/instruments.html
+++ b/public-html/instruments.html
@@ -95,7 +95,9 @@
             <td>Trumpet</td>
             <td>Yes</td>
             <td>
-              <button class="btn btn-clemson">Check Out</button>
+              <a href="checkout.html">
+                <button class="btn btn-clemson">Check Out</button>
+              </a>
             </td>
           </tr>
           <tr>
@@ -103,7 +105,9 @@
             <td>Tuba</td>
             <td>Yes</td>
             <td>
-              <button class="btn btn-clemson">Check Out</button>
+              <a href="checkout.html">
+                <button class="btn btn-clemson">Check Out</button>
+              </a>
             </td>
           </tr>
           <tr>
@@ -111,7 +115,9 @@
             <td>Trumpet</td>
             <td>No</td>
             <td>
-              <button class="btn btn-clemson">Check In</button>
+              <a href="checkin.html">
+                <button class="btn btn-clemson">Check In</button>
+              </a>
             </td>
           </tr>
           <tr>
@@ -119,7 +125,9 @@
             <td>French Horn</td>
             <td>Yes</td>
             <td>
-              <button class="btn btn-clemson">Check Out</button>
+              <a href="checkout.html">
+                <button class="btn btn-clemson">Check Out</button>
+              </a>
             </td>
           </tr>
           <tr>
@@ -127,7 +135,9 @@
             <td>Clarinet</td>
             <td>Yes</td>
             <td>
-              <button class="btn btn-clemson">Check Out</button>
+              <a href="checkout.html">
+                <button class="btn btn-clemson">Check Out</button>
+              </a>
             </td>
           </tr>
           <tr>
@@ -135,7 +145,9 @@
             <td>Flute</td>
             <td>Yes</td>
             <td>
-              <button class="btn btn-clemson">Check Out</button>
+              <a href="checkout.html">
+                <button class="btn btn-clemson">Check Out</button>
+              </a>
             </td>
           </tr>
           <tr>
@@ -143,7 +155,9 @@
             <td>Flute</td>
             <td>No</td>
             <td>
-              <button class="btn btn-clemson">Check In</button>
+              <a href="checkin.html">
+                <button class="btn btn-clemson">Check In</button>
+              </a>
             </td>
           </tr>
           <tr>
@@ -151,7 +165,9 @@
             <td>Trombone</td>
             <td>No</td>
             <td>
-              <button class="btn btn-clemson">Check In</button>
+              <a href="checkin.html">
+                <button class="btn btn-clemson">Check Out</button>
+              </a>
             </td>
           </tr>
         </tbody>
