--- a/public_html/index.html
+++ b/public_html/index.html
@@ -81,13 +81,13 @@
               <div class="form-group row">
                 <label for="su-fname" class="col-md-4 col-form-label">First Name</label>
                 <div class="col-md-8">
-                  <input type="text" id="su-fname" class="form-control" ng-model="signUpForm.firstname">
+                  <input type="text" id="su-fname" class="form-control" ng-model="signUpForm.firstName">
                 </div>
               </div>
               <div class="form-group row">
                 <label for="su-lname" class="col-md-4 col-form-label">Last Name</label>
                 <div class="col-md-8">
-                  <input type="text" id="su-lname" class="form-control" ng-model="signUpForm.lastname">
+                  <input type="text" id="su-lname" class="form-control" ng-model="signUpForm.lastName">
                 </div>
               </div>
               <div class="form-group row">
