--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,6 +7,7 @@
 
   <!-- Angular --> 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
 
   <!-- bootstrap & dependencies (jquery and popper) --> 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -20,7 +21,13 @@
 <body ng-controller="mainCtrl">
   <div class="page-header">
     <div class="container">
-      <h1>Clemson University Instrument Rentals</h1>
+      <div class="row">
+        <h1 class="col-8">Clemson University Instrument Rentals</h1>
+        <div class="col-4">
+          <p>{{session.username}}</p>
+          <button class="btn btn-clemson-alt" ng-click="signOut()">Sign Out</button>
+        </div>
+      </div>
     </div>
   </div>
 
