--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="inst_rent">
+<html ng-app="instRent">
 <head>
   <title>CUIR</title>
   <meta charset="utf-8">
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="row">
         <h1 class="col-8">Clemson University Instrument Rentals</h1>
-        <div class="col-4">
+        <div ng-if="session.signedIn" class="col-4">
           <p>{{session.username}}</p>
           <button class="btn btn-clemson-alt" ng-click="signOut()">Sign Out</button>
         </div>
@@ -31,92 +31,9 @@
     </div>
   </div>
 
-	<div class="container">
-    <div id="info-bar" class="jumbotron jumbotron-clemson"> 
-      <h2>{{informationalTitle}}</h2>
-      <p>Phasellus at egestas nisi. Nunc posuere sagittis ultrices. Vestibulum molestie odio et velit malesuada, at egestas ante congue. Ut euismod leo turpis, id finibus eros volutpat at. Suspendisse at lectus vel leo fermentum ultricies. Nam nec vulputate lectus. Fusce ligula massa, ultrices ut neque ac, iaculis imperdiet lorem. Proin facilisis egestas lorem, non pretium lectus porttitor vel. Vestibulum ac quam iaculis, aliquam mauris ut, hendrerit nisi. Phasellus eget mauris non mauris vulputate ullamcorper a id nunc. Quisque semper nulla vitae dui convallis lobortis. Suspendisse potenti. Donec interdum non libero congue gravida. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
-  </div>
+  <div ng-view></div>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-6">
-        <div class="card card-clemson mb-3">
-          <h5 class="card-header">Sign In</h5>
-          <div class="card-body">
-            <form class="form" id="si-form" ng-submit="submitSignInForm()">
-              <div class="form-group row">
-                <label for="si-username" class="col-md-4 col-form-label">Username</label>
-                <div class="col-md-8">
-                  <input type="text" id="si-username" class="form-control" ng-model="signInForm.username">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="si-password" class="col-md-4 col-form-label">Password</label>
-                <div class="col-md-8">
-                  <input type="password" id="si-password" class="form-control" ng-model="signInForm.password">
-                </div>
-              </div>
-              <input type="submit" value="Sign In" class="btn btn-clemson">
-            </form>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-6">
-        <div class="card card-clemson mb-3">
-          <h5 class="card-header">Sign Up</h5>
-          <div class="card-body">
-            <form class="form" id="su-form" ng-submit="submitSignUpForm()">
-              <div class="form-group row">
-                <label for="su-cuid" class="col-md-4 col-form-label">CUID</label>
-                <div class="col-md-8">
-                  <input type="" id="su-cuid" class="form-control" ng-model="signUpForm.cuid">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="su-email" class="col-md-4 col-form-label">Clemson Email</label>
-                <div class="col-md-8">
-                  <input type="" id="su-email" class="form-control" ng-model="signUpForm.cuEmail">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="su-username" class="col-md-4 col-form-label">Username</label>
-                <div class="col-md-8">
-                  <input type="text" id="su-username" class="form-control" ng-model="signUpForm.username">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="su-fname" class="col-md-4 col-form-label">First Name</label>
-                <div class="col-md-8">
-                  <input type="text" id="su-fname" class="form-control" ng-model="signUpForm.firstName">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="su-lname" class="col-md-4 col-form-label">Last Name</label>
-                <div class="col-md-8">
-                  <input type="text" id="su-lname" class="form-control" ng-model="signUpForm.lastName">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="su-password" class="col-md-4 col-form-label">Password</label>
-                <div class="col-md-8">
-                  <input type="password" id="su-password" class="form-control" ng-model="signUpForm.password">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="su-confirm-password" class="col-md-4 col-form-label">Confirm Password</label>
-                <div class="col-md-8">
-                  <input type="password" id="su-confirm-password" class="form-control" ng-model="signUpForm.passwordConfirm">
-                </div>
-              </div>
-              <input type="submit" value="Sign Up" class="btn btn-clemson">
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <script src="js/app.js"></script>
+  <script src="app.js"></script>
+  <script src="views/login/login.js"></script>
 </body>
 </html>
