added home pages for each user type.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -26,6 +26,9 @@
   <script src="app.js"></script>
   <script src="views/header/header.js"></script>
   <script src="views/login/login.js"></script>
+  <script src="views/userHome/userHome.js"></script>
+  <script src="views/managerHome/managerHome.js"></script>
+  <script src="views/adminHome/adminHome.js"></script>
   <script src="views/home/home.js"></script>
 </body>
 </html>
