added instruments page templates. removed session service from home page controllers.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -29,6 +29,6 @@
   <script src="views/userHome/userHome.js"></script>
   <script src="views/managerHome/managerHome.js"></script>
   <script src="views/adminHome/adminHome.js"></script>
-  <script src="views/home/home.js"></script>
+  <script src="views/instruments/instruments.js"></script>
 </body>
 </html>
