added templates for: addInstrument, addUser, contracts, manageUsers

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -30,5 +30,9 @@
   <script src="views/managerHome/managerHome.js"></script>
   <script src="views/adminHome/adminHome.js"></script>
   <script src="views/instruments/instruments.js"></script>
+  <script src="views/addInstrument/addInstrument.js"></script>
+  <script src="views/contracts/contracts.js"></script>
+  <script src="views/manageUsers/manageUsers.js"></script>
+  <script src="views/addUser/addUser.js"></script>
 </body>
 </html>
