added and implemented edit user page.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -34,5 +34,6 @@
   <script src="views/contracts/contracts.js"></script>
   <script src="views/manageUsers/manageUsers.js"></script>
   <script src="views/addUser/addUser.js"></script>
+  <script src="views/editUser/editUser.js"></script>
 </body>
 </html>
