added and implemented request instrument page

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -31,6 +31,7 @@
   <script src="views/adminHome/adminHome.js"></script>
   <script src="views/instruments/instruments.js"></script>
   <script src="views/addInstrument/addInstrument.js"></script>
+  <script src="views/makeRequest/makeRequest.js"></script>
   <script src="views/contracts/contracts.js"></script>
   <script src="views/manageUsers/manageUsers.js"></script>
   <script src="views/addUser/addUser.js"></script>
