--- a/public_html/index.html
+++ b/public_html/index.html
@@ -37,5 +37,6 @@
   <script src="views/manageUsers/manageUsers.js"></script>
   <script src="views/addUser/addUser.js"></script>
   <script src="views/editUser/editUser.js"></script>
+  <script src="views/editProfile/editProfile.js"></script>
 </body>
 </html>
