--- a/public_html/index.html
+++ b/public_html/index.html
@@ -21,6 +21,7 @@
 <body ng-controller="mainCtrl">
   <ng-include src="'views/header/header.html'"></ng-include>
 
+  <!-- Angular loads each view template here. --> 
   <div ng-view></div>
 
   <script src="app.js"></script>
